--- a/css/footer.css
+++ b/css/footer.css
@@ -62,7 +62,7 @@ footer {
 
 .social-links a {
   font-size: 24px;
-  transition: transform .3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .social-links a:hover {
@@ -70,14 +70,14 @@ footer {
 }
 
 .social-links a .bi-instagram {
-  color: #E1306C;
+  color: #e1306c;
   transform: scale(1.2);
 }
 .social-links a .bi-whatsapp {
-  color: #25D366;
+  color: #25d366;
 }
 .social-links a .bi-telephone {
-  color: #5a5a5a;   
+  color: #5a5a5a;
 }
 .social-links a .bi-envelope {
   color: #34b7f1;
@@ -98,7 +98,19 @@ footer {
   font-size: 12px;
   color: #6c757d;
 }
-.footer-logo-div img{
+.footer-logo-div img {
   max-width: 50px;
 }
 
+@media (max-width: 768px) {
+  footer {
+    margin-top: 0;
+  }
+  .footer-logo-div img {
+    display: none;
+  }
+  .footer-container{
+    flex-direction: column;
+    gap: 20px;
+  }
+}
