--- a/css/galeria.css
+++ b/css/galeria.css
@@ -48,6 +48,7 @@
   padding: 10px;
   box-sizing: border-box;
   position: relative;
+  cursor: pointer;
 }
 
 .grid-item img {
@@ -71,8 +72,81 @@
   opacity: 0;
   transition: opacity 0.3s ease;
   font-family: var(--fuente-titulos);
+  pointer-events: none; /* Para que no interfiera con el click */
 }
 
 .grid-item:hover .overlay {
   opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .grid-sizer,
+  .grid-item {
+    width: 50%;
+  }
+}
+
+/* Image Viewer Styles (Mobile First) */
+#image-viewer {
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 1000;
+  justify-content: center;
+  align-items: center;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
+
+#image-viewer.active {
+  display: flex; /* Shown when active */
+}
+
+#close-viewer {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  color: white;
+  font-size: 25px;
+  padding: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  text-shadow: 0 0 10px black;
+}
+
+#viewer-image {
+  max-width: 95%;
+  max-height: 85%;
+  border-radius: var(--borde-radio);
+  box-shadow: 0 0 20px black;
+}
+
+.nav-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  font-size: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  text-shadow: 0 0 10px black;
+  user-select: none; /* Prevent text selection */
+}
+
+#prev-image {
+  left: 15px;
+}
+
+#next-image {
+  right: 15px;
+}
+#prev-image:hover,
+#next-image:hover,
+#close-viewer:hover {
+  color: var(--color-hover);
+  transition: color .3s ease-in-out;
 }
