--- a/css/index.css
+++ b/css/index.css
@@ -41,12 +41,78 @@ section {
   font-size: 1.1em;
 }
 
+@media (max-width: 768px) {
+  section#hero {
+    padding: 0;
+  }
+
+  #hero .container,
+  #manufactura .container,
+  #servicios .container,
+  #experiencia .container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: var(--v20) var(--h20);
+  }
+
+  #hero .container .hero-image,
+  #manufactura .container .image-side img,
+  #servicios .container .image-side img,
+  #experiencia .container .image-side img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    margin: 0;
+  }
+  #hero .container .hero-image img,
+  #manufactura .container .image-side img,
+  #servicios .container .image-side img,
+  #experiencia .container .image-side img {
+    filter: brightness(0.7);
+    border-radius: 0;
+  }
+
+  #hero .hero-content,
+  #manufactura .container .text-side,
+  #servicios .container .text-side,
+  #experiencia .container .text-side {
+    position: relative;
+    z-index: 3;
+    color: white;
+    margin: 0;
+  }
+  #servicios .container .text-side .paragraph {
+    display: none;
+  }
+
+  #hero .container .hero-content h1 {
+    color: white;
+    font-size: 2.5em;
+  }
+
+  #hero .container .hero-content p {
+    font-size: 1.1em;
+  }
+  section .container .text-side h2,
+  section .container .text-side h3 {
+    color: white;
+    font-weight: 300;
+    
+  }
+}
 /*** CONTENT SECTION ***/
 .content-section .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: var(--h20);
+  position: relative;
 }
 
 .content-section .container .image-side {
@@ -241,4 +307,70 @@ section {
   transform: translate(-75%, -100%);
   box-shadow: 0 0 15px var(--color-secundario);
   border: 1px solid var(--color-secundario);
+}
+
+@media (max-width: 768px) {
+  .content-section .container {
+    flex-direction: column;
+  }
+
+  .content-section .container .image-side,
+  .content-section .text-side {
+    width: 100%;
+    height: 100%;
+  }
+
+  .text-side .infografia p,
+  .text-side .infografia-3 p,
+  .text-side .infografia-6 p {
+    background-color: transparent;
+    backdrop-filter: blur(10px);
+    color: white;
+    border: 0px solid white;
+    box-shadow: 0px 0px 10px #ffffff77;
+  }
+
+  .infografia-3 {
+    display: block;
+    position: relative;
+    width: 350px;
+    height: 320px;
+    margin: 0 auto;
+  }
+  .infografia-3 p {
+    position: absolute;
+  }
+  .infografia-3 p:nth-child(1) {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .infografia-3 p:nth-child(2) {
+    bottom: 10px;
+    left: 0;
+  }
+  .infografia-3 p:nth-child(3) {
+    bottom: 10px;
+    right: 0;
+  }
+  .infografia-6 {
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: var(--h20);
+  }
+
+  .text-side .infografia-6 p {
+    position: static;
+    transform: none !important;
+    margin: 0;
+  }
+
+  .infografia-position h3 {
+    position: static;
+    transform: none;
+    text-align: center;
+    margin-bottom: var(--v20);
+  }
 }
